// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`How-to command in de > informs the user how to run queue commands (interaction) 1`] = `
"Um einen Song einzureichen, verwende \`?sr\`

Zum Beispiel: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Ich werde mit einer Bestätigung antworten, dass dein Song zur Warteschlange hinzugefügt wurde!
Siehe [unsere Liste der unterstützten Plattformen](<https://github.com/AverageHelper/Gamgee#supported-music-platforms>).

Um einen Link zum aktuellen Song zu erhalten, verwende \`?nowplaying\`."
`;

exports[`How-to command in de > informs the user how to run queue commands (message) 1`] = `
"Um einen Song einzureichen, verwende \`?sr\`

Zum Beispiel: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Ich werde mit einer Bestätigung antworten, dass dein Song zur Warteschlange hinzugefügt wurde!
Siehe unsere Liste der unterstützten Plattformen <https://github.com/AverageHelper/Gamgee#supported-music-platforms>.

Um einen Link zum aktuellen Song zu erhalten, verwende \`?nowplaying\`."
`;

exports[`How-to command in en-GB > informs the user how to run queue commands (interaction) 1`] = `
"To submit a song, use \`?sr\`

For example: \`/sr https://youtu.be/dQw4w9WgXcQ\`
I will respond with confirmation that your song has joined the queue!
See [our list of supported platforms](<https://github.com/AverageHelper/Gamgee#supported-music-platforms>).

To get a link to the current song, use \`?nowplaying\`."
`;

exports[`How-to command in en-GB > informs the user how to run queue commands (message) 1`] = `
"To submit a song, use \`?sr\`

For example: \`/sr https://youtu.be/dQw4w9WgXcQ\`
I will respond with confirmation that your song has joined the queue!
See our list of supported platforms at <https://github.com/AverageHelper/Gamgee#supported-music-platforms>.

To get a link to the current song, use \`?nowplaying\`."
`;

exports[`How-to command in en-US > informs the user how to run queue commands (interaction) 1`] = `
"To submit a song, use \`?sr\`

For example: \`/sr https://youtu.be/dQw4w9WgXcQ\`
I will respond with confirmation that your song has joined the queue!
See [our list of supported platforms](<https://github.com/AverageHelper/Gamgee#supported-music-platforms>).

To get a link to the current song, use \`?nowplaying\`."
`;

exports[`How-to command in en-US > informs the user how to run queue commands (message) 1`] = `
"To submit a song, use \`?sr\`

For example: \`/sr https://youtu.be/dQw4w9WgXcQ\`
I will respond with confirmation that your song has joined the queue!
See our list of supported platforms at <https://github.com/AverageHelper/Gamgee#supported-music-platforms>.

To get a link to the current song, use \`?nowplaying\`."
`;

exports[`How-to command in es-ES > informs the user how to run queue commands (interaction) 1`] = `
"Para enviar una canción, use \`?sr\`

Por ejemplo: \`/sr https://youtu.be/dQw4w9WgXcQ\`
¡Responderé con una confirmación indicando que tu canción se ha unido a la cola!
Vea [nuestra lista de plataformas compatibles](<https://github.com/AverageHelper/Gamgee#supported-music-platforms>).

Para obtener un enlace a la canción actual, use \`?nowplaying\`."
`;

exports[`How-to command in es-ES > informs the user how to run queue commands (message) 1`] = `
"Para enviar una canción, use \`?sr\`

Por ejemplo: \`/sr https://youtu.be/dQw4w9WgXcQ\`
¡Responderé con una confirmación indicando que tu canción se ha unido a la cola!
Consulte nuestra lista de plataformas compatibles en <https://github.com/AverageHelper/Gamgee#supported-music-platforms>.

Para obtener un enlace a la canción actual, use \`?nowplaying\`."
`;

exports[`How-to command in fr > informs the user how to run queue commands (interaction) 1`] = `
"Pour soumettre une chanson, utilisez \`?sr\`

Par exemple: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Je vous répondrai avec une confirmation indiquant que votre chanson a rejoint la file d'attente!
Consultez [notre liste de plateformes prises en charge](<https://github.com/AverageHelper/Gamgee#supported-music-platforms>).

Pour obtenir un lien vers la chanson actuelle, utilisez \`?nowplaying\`."
`;

exports[`How-to command in fr > informs the user how to run queue commands (message) 1`] = `
"Pour soumettre une chanson, utilisez \`?sr\`

Par exemple: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Je vous répondrai avec une confirmation indiquant que votre chanson a rejoint la file d'attente!
Consultez notre liste des plates-formes prises en charge sur <https://github.com/AverageHelper/Gamgee#supported-music-platforms>.

Pour obtenir un lien vers la chanson actuelle, utilisez \`?nowplaying\`."
`;

exports[`How-to command in hu > informs the user how to run queue commands (interaction) 1`] = `
"Dal beküldéséhez használja a \`?sr\` parancsot

Például: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Jelezni fogom, amint sikeresen hozzáadtam a dalt a sorhoz!
Tekintse meg [a támogatott platformok listáját](<https://github.com/AverageHelper/Gamgee#supported-music-platforms>).

Az aktuális dal hivatkozásának lekéréséhez használja a \`?nowplaying\` parancsot."
`;

exports[`How-to command in hu > informs the user how to run queue commands (message) 1`] = `
"Dal beküldéséhez használja a \`?sr\` parancsot

Például: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Jelezni fogom, amint sikeresen hozzáadtam a dalt a sorhoz!
Tekintse meg a támogatott platformok listáját a <https://github.com/AverageHelper/Gamgee#supported-music-platforms> címen.

Az aktuális dal hivatkozásának lekéréséhez használja a \`?nowplaying\` parancsot."
`;

exports[`How-to command in pt-BR > informs the user how to run queue commands (interaction) 1`] = `
"Para enviar uma música, use \`?sr\`

Por exemplo: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Responderei com uma confirmação indicando que sua música entrou na fila!
Veja [nossa lista de plataformas suportadas](<https://github.com/AverageHelper/Gamgee#supported-music-platforms>).

Para obter um link para a música atual, use \`?nowplaying\`."
`;

exports[`How-to command in pt-BR > informs the user how to run queue commands (message) 1`] = `
"Para enviar uma música, use \`?sr\`

Por exemplo: \`/sr https://youtu.be/dQw4w9WgXcQ\`
Responderei com uma confirmação indicando que sua música entrou na fila!
Veja nossa lista de plataformas suportadas em <https://github.com/AverageHelper/Gamgee#supported-music-platforms>.

Para obter um link para a música atual, use \`?nowplaying\`."
`;
